--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "classnames": "^2.2.6",
+    "date-fns": "^2.15.0",
+    "gray-matter": "^4.0.2",
     "next": "9.3.5",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-toastify": "^6.0.8",
+    "remark": "^12.0.1",
+    "remark-html": "^12.0.0"
   }
 }
