--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "16.13.1",
     "react-toastify": "^6.0.8",
     "remark": "^12.0.1",
-    "remark-html": "^12.0.0"
+    "remark-html": "^12.0.0",
+    "styled-components": "^5.1.1"
   }
 }
